0027281: Some classes in GCPnts are not const-correct

const keyword has been added to the method parameters